<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/orders_card"
        android:layout_width="335dp"
        android:layout_height="180dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/order"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/order_id_example"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/date_example"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/quantity"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/order_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/montserrat"
            android:text="4"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="85dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/order_total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="77dp"
            android:layout_marginTop="87dp"
            android:fontFamily="@font/montserrat"
            android:text="150 ₽"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/order_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="125dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/montserrat"
            android:text="@string/details"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:layout_marginTop="140dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/order_status_example"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>