<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailField"
            android:hint="@string/email_hint"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp"
            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true">

        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginField"
            android:hint="@string/login_hint"
            android:inputType="text"
            android:layout_marginTop="20dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp"
            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true">

        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true">

        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneNumberField"
            android:hint="@string/phone_number_hint"
            android:layout_marginTop="20dp"
            android:inputType="phone"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp"
            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true">

        </EditText>

    </LinearLayout>

</androidx.cardview.widget.CardView>