<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cart_main_layout"
    tools:context=".CartFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cart_upper_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name_tag"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_thin"
            android:gravity="left"
            android:text="Корзина"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cart_upper_layout"
        app:layout_constraintTop_toBottomOf="@+id/cart_upper_layout" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/amountOfItems"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="330dp"
            android:layout_marginTop="50dp"
            android:text="@string/cart_amount_null"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/checkTmpl"
            app:layout_constraintTop_toBottomOf="@+id/finalPrice" />

        <TextView
            android:id="@+id/finalPrice"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="330dp"
            android:layout_marginTop="10dp"
            android:text="@string/cart_check_null"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/amountTmpl"
            app:layout_constraintTop_toBottomOf="@+id/cartRecycler" />

        <TextView
            android:id="@+id/amountTmpl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/cart_amount_items"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/name_tag"
            app:layout_constraintTop_toBottomOf="@+id/cartRecycler" />

        <TextView
            android:id="@+id/checkTmpl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/cart_check"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/name_tag"
            app:layout_constraintTop_toBottomOf="@+id/amountTmpl" />

        <ImageButton
            android:id="@+id/buy_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="@color/main"
            android:contentDescription="@string/name_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amountOfItems"
            app:srcCompat="@drawable/ic_button_checkout" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
